# mandel

./: .gitignore  README.md  binary-readme.txt  makefile
src/: CMakeLists.txt  build.bat  colordlg.cpp  colordlg.h  colormap.cpp  colormap.h  drawwndw.cpp  drawwndw.h  exec.bat  fltrngvl.cpp  fltrngvl.h  fltrngvl.rh  main.cpp  mandel.rc  mandel.rh  misc.cpp  misc.h  pointd.cpp  pointd.h  resource.h  resource.rc  version.h
